# jupyterhub-home-nfs

./: .gitignore  .pre-commit-config.yaml  .prettierignore  CHANGELOG.md  Dockerfile  README.md  RELEASE.md  chartpress.yaml  docker-compose.yml  generate.py  pyproject.toml  setup.py  tbump.toml  tests.py
.github/workflows/: build-publish-docker-helm.yaml  docker-build.yaml  python-package.yml
example/: nfs-client.yaml  nfs-server.yaml
examples/: jupyterhub-nfs-volume.yaml  jupyterhub-values.yaml
get-quota-your-home/: Dockerfile  Makefile  README.md  docker-compose.yml  generate.py  tests.py
get-quota-your-home/dev-scripts/: mount-xfs.sh  start.sh
get-quota-your-home/scripts/: mount-xfs.sh
get_quota_the_home/: README.md
get_quota_your_home/: Dockerfile  README.md  generate.py  tests.py
helm/jupyter-home-nfs/: Chart.yaml  values.yaml
helm/jupyter-home-nfs/templates/: NOTES.txt  deployment.yaml  persistent-volume-claim.yaml  persistent-volume.yaml  service.yaml
helm/jupyterhub-home-nfs/: Chart.yaml  values.schema.json  values.schema.yaml  values.yaml
helm/jupyterhub-home-nfs/mounted-files/: quota-enforcer-config.py
helm/jupyterhub-home-nfs/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment.yaml  persistent-volume-claim.yaml  persistent-volume.yaml  quota-enforcer-config.yaml  secret.yaml  service.yaml
jupyterhub_home_nfs/: Dockerfile  README.md  __init__.py  generate.py  metrics.py  tests.py
nfs-ganesha/: Dockerfile  ganesha.conf  start.sh
quota_enforcer/.github/workflows/: python-package.yml
tests/: tests.py
