[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jupyterhub_home_nfs"
dynamic = ["version"]
description = "A package for managing storage quotas for JupyterHub home directories"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "BSD-3-Clause"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
]
dependencies = [
    "traitlets>=5.13.0",
    "ruamel-yaml==0.18.10",
    "prometheus-client"
]

[project.urls]
Homepage = "https://github.com/2i2c-org/jupyterhub-home-nfs"

[tool.hatch.version]
path = "jupyterhub_home_nfs/__init__.py"

[tool.tbump]
github_url = "https://github.com/2i2c-org/jupyterhub-home-nfs"

[tool.tbump.version]
current = "1.2.1-0.dev"
regex = '''
  (?P<major>\d+)
  \.
  (?P<minor>\d+)
  \.
  (?P<patch>\d+)
  (\-
    (?P<prelease>
      (
       (alpha|beta|rc)\.\d+|
       0\.dev
      )
    )
  )?
  '''

[tool.tbump.git]
message_template = "Bump to {new_version}"
tag_template = "{new_version}"

[[tool.tbump.file]]
src = "jupyterhub_home_nfs/__init__.py"
search = '__version__ = "{current_version}"'

[[tool.tbump.file]]
src = "helm/jupyterhub-home-nfs/Chart.yaml"
search = 'version: {current_version}'

[[tool.tbump.file]]
src = "helm/jupyterhub-home-nfs/Chart.yaml"
search = 'appVersion: {current_version}'

[[tool.tbump.file]]
src = "chartpress.yaml"
search = 'baseVersion: {current_version}'

[tool.isort]
profile = "black"
